# Int32_search_algorithm

./: .gitignore  CMakeLists.txt  Makefile  README.txt
.github/workflows/: ci.yml
benchmark/: bench_data_gen.c  bench_data_gen.h  bench_main.c
demo/: 10.ps1  12.txt  bench_100.ps1  demo_int32_no_bloom.c  demo_int32_no_bloom_fullhit.c  demo_int64_search.c  demo_search.c
docs/: README.md
docs/architecture/: design_int64_b1.md  design_int64_phase2_cow.md  design_phase15_cow.md  design_phase1_mvp.md  design_phase2_ab1.md  design_phase3_v1_1.md  技术路线.md
docs/decisions/: acceptance_fixplan_wave1.md  assessment_cpu_supports.md  fixplan_phase1_mvp.md  (+11 more)
include/: int32_search.h  int64_search.h
other/: deep05_bench.c  linux_build.sh  server_connection_report.md
src/: api.c  api_int64.c  bloom_filter.c  bloom_filter.h  build_b1.c  build_b1.h  build_decision.c  build_decision.h  build_decision_int64.c  build_dir.c  build_dir.h  build_dir_int64.c  build_sorted.c  build_sorted.h  build_sorted_int64.c  internal.h  internal_int64.h  platform_cpu.c  platform_cpu.h  platform_memory.c  platform_memory.h  platform_thread.h  poc_b1_asan_edge.c  poc_b1_crossover.c  poc_b1_pool.c  poc_benchmark.c  poc_benchmark_v2.c  poc_benchmark_v3.c  poc_bloom_bypass.c  poc_eytzinger.c  poc_int64_avx2.c  poc_int64_b1.c  poc_int64_b1_crossover.c  poc_stree.c  search_avx2.c  search_avx2.h  search_avx2_win.s  search_b1.c  search_b1.h  search_b1_int64.c  (+4 more)
test/: t1_sanity.c  t23_thread_smoke.c  t4_rebuild_smoke.c  test_b1_boundary.c  test_b1_correctness.c  test_b1_decision.c  test_b1_dir_fuzz.c  test_bloom.c  test_bloom_10m.c  test_boundary.c  test_correctness.c  test_fuzz.c  test_hugepages.c  test_int64.c  test_int64_perf.c  test_int64_thread.c  test_int64_zipf.c  test_range.c  test_scalar_fallback.c  test_thread.c  test_thread_b1.c  test_unit.c
(+186 files in other folders)
